--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">XPTranslateText</string>
     <string name="home_title">Local Translation Service</string>
     <string name="server_switch">Start Local Translation Server</string>
-    <string name="server_running">Running: http://127.0.0.1:%1$d</string>
+    <string name="server_running">Running: https://127.0.0.1:%1$d</string>
     <string name="server_stopped">Not running</string>
     <string name="lang_section_title">Language Settings</string>
     <string name="source_lang">Source language</string>
